<resources>
    <string name="app_name">OTO</string>
    <string name="xiaomi_app_key">5511896685616</string>
    <string name="xiaomi_app_id">2882303761518966616</string>
    <string name="default_lat">12.990019</string>
    <string name="default_lng">77.557084</string>
    <string name="enable_gps" translatable="false">Enable GPS</string>
    <string name="required_for_this_app">Permission required to proceed</string>
    <string name="enable_now">Enable now</string>
    <string name="location_permission_not_granted">Location permission not granted</string>
    <string name="flyy_sdk_partner_key">02479576d7213af7a056</string>
    <string name="flyy_sdk_partner_key_release">fcaf40f43480ae6c6aea</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="permission_denied">Please, allow permissions for correct app works</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="location">Background Location access required</string>
    <string name="contnue">Continue</string>
    <string name="location_text">The accessibility of our services like Rides, Challenges and Goals are dependent on your geographic location. Hence, we collect and monitor your location in background there by helping us in getting your driving behaviour and providing you the drive rating and driving tips. This permission is required to access location even when the app is closed or not in use.</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="detected_activities_title">Detected Activities</string>
    <string name="request_activity_updates">Start</string>
    <string name="remove_activity_updates">Stop</string>
    <string name="activity_updates_enabled">Activity updates enabled</string>
    <string name="activity_updates_not_enabled">Failed to enable activity updates</string>
    <string name="activity_updates_removed">Activity updates removed</string>
    <string name="activity_updates_not_removed">Failed to remove activity updates</string>
    <string name="percent">%1$d%%</string>
    <string name="oto_capital">OTO Capital</string>
    <string name="login">Login</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="password_label">Password</string>
    <string name="registration">Registration</string>
    <string name="register">Sign Up</string>
    <string name="conf_password_label">Confirm Password</string>
    <string name="user_name_label">User Name</string>
    <string name="user_email_label">Email</string>
    <string name="otp_label">Please enter the verification code sent to your registered mobile number</string>
    <string name="msg_notification_service_desc">Background Data Collection is Active</string>
    <string name="title_foreground_service_notification">OTO Service</string>
    <string name="lbl_btn_sticky_notification_open_app">Open Application</string>
    <string name="title_gen_notification">OTO Service</string>
    <string name="description_gen_notification">Click here to open in App</string>
    <string name="snapshot_title">Snapshot</string>
    <string name="snapshot_subtitle">Click for check</string>
    <string name="headphones_state">Headphones are %s</string>
    <string name="headphones_state_connect">connected</string>
    <string name="headphones_state_disconnected">disconnected</string>
    <string name="user_location">Latitude : %f\nLongitude : %f\nAltitude : %f\nAccuracy : %f</string>
    <string name="user_activity">Activity: \nConfidence:</string>
    <string name="fence_title">Fence</string>
    <string name="fence_subtitle">Tracking: %s</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="fence_headphones_connect">Headphones connect</string>
    <string name="fence_headphones_disconnect">Headphones disconnect</string>
    <string name="fence_user_idle">User nothing doing</string>
    <string name="fence_user_walking">User walking</string>
    <string name="fence_user_start_walking">User start walking</string>
    <string name="fence_user_stop_walking">User stop walking</string>
    <string name="fence_user_in_car">In car</string>
    <string name="fence_user_start_ride_on_car">User start ride on car</string>
    <string name="fence_user_stop_ride_on_car">User stop ride on car</string>
    <string name="fence_start_">Headphone disconnect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Feed</string>
    <string name="ride">Ride</string>
    <string name="goal">Goal</string>
    <string name="done">Done</string>
    <string name="confirm_your_all_ride">Confirm your all Ride</string>
    <string name="start">Start</string>
    <string name="stop">STOP</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="skip">Skip</string>
    <string name="goals">Goals</string>
    <string name="filter_today">Today</string>
    <string name="filter_yesterday">Yesterday</string>
    <string name="filter_week">Last Week</string>
    <string name="filter_month">Last Month</string>
    <string name="filter_any_date">Any Date</string>
    <string name="latest">Latest</string>
    <string name="all_badges">All Badges</string>
    <string name="level">Level</string>
    <string name="details">Details</string>
    <string name="leaf_level_goals">Solo Skill Goal</string>
    <string name="view_all">View All</string>
    <string name="outocme_based_goals">Multi Skill Goal</string>
    <string name="completed_goals">Completed goals</string>
    <string name="completed_goals1">Goals you aced</string>
    <string name="completed_feed">Completed Challenges</string>
    <string name="completed_feed1">Challenges won</string>
    <string name="failed_goals">Failed goals</string>
    <string name="failed_goals1">Goals you crashed</string>
    <string name="failed_feed">Failed Challenges</string>
    <string name="failed_feed1">Challenges lost</string>
    <string name="image">image</string>
    <string name="hard_braking">HARD BRAKING</string>
    <string name="advanced">ADVANCED</string>
    <string name="locked">LOCKED</string>
    <string name="focus_the_ride_no_plans_no_maps">Focus the Ride No Plans No Maps</string>
    <string name="score">Score</string>
    <string name="duration">Duration</string>
    <string name="hard_braking_low">Hard Braking</string>
    <string name="overview_data">Lorem ipsum dolor sit amet, consectetur and adicing elit. Nulla feugiat mattis justo necurid. Suspendisse venenatis bibendum.</string>
    <string name="rewards">Rewards</string>
    <string name="rules">Rules</string>
    <string name="start_goal">Start now</string>
    <string name="need_to_achieve_the_score">Need to Achieve</string>
    <string name="completed">Completed</string>
    <string name="got_it">Got it!</string>
    <string name="requied_score">"Score required is "</string>
    <string name="detail">Detail</string>
    <string name="featured_challenges">Featured Challenges</string>
    <string name="recommended">Recommended</string>
    <string name="open_challenge">Active Challenges</string>
    <string name="all_challenges">Challenges</string>
    <string-array name="filter">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Any Date</item>
    </string-array>
    <string name="invite">INVITE</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="share_now">Share now!</string>
    <string name="all">All</string>
    <string name="new_label">New</string>
    <string name="riders_participating">Riders participating.</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="invite_your_friends_to_this_nchallenge">Invite your friends to this..\nChallenge</string>
    <string name="floating_widget_details">OTO App for Bike Riders</string>
    <string name="floating_widget_label">OTO Riding App</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
    <string name="view">VIEW</string>
    <string name="oto">OTO</string>
    <string name="onboard_message">Take the ride \nLive the Experience \nFind your Passion</string>
    <string name="get_start">Get Started</string>
    <string name="login_acc">Login to your account</string>
    <string name="mob_no_hint">Enter your mobile number</string>
    <string name="sign_in">Sign In</string>
    <string name="ent_code">OTP Verification</string>
    <string name="verify_num">We’ve sent an OTP to the mobile number (+91-{mob_num}). Please enter it to complete verification</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp">Don\'t receive it? Resend OTP</string>
    <string name="ent_veh_det">Select the type of Vehicle you own</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="badges">Badges</string>
    <string name="coins">Coins</string>
    <string name="your_det">Your Details</string>
    <string name="veh_det">Vehicle Details</string>
    <string name="faq">FAQ</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="ph_no">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="state">State</string>
    <string name="pan_card">Pan Card</string>
    <string name="close">close</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">video</string>
    <string name="honda_shine_drum">Honda Shine DRUM</string>
    <string name="_125cc">125cc</string>
    <string name="pipe">|</string>
    <string name="_65_kmpl">65 kmpl</string>
    <string name="ex_showroom_price">Ex-Showroom Price</string>
    <string name="_92_599">₹ 92,599/-</string>
    <string name="fastrack_get_3000_cashback">Fastrack Get ₹3000 Cashback. Pay 99 to unlock</string>
    <string name="compare">Compare</string>
    <string name="upload_your">Upload Your</string>
    <string name="document_name">Document Name</string>
    <string name="upload">Upload</string>
    <string name="here_s_the_guide_video">Here’s the guide video</string>
    <string name="step_by_step_walkthrough_to_help_you">Step by step walkthrough to help you</string>
    <string name="file_upload">File Upload</string>
</resources>