<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/_11sdp">

    <FrameLayout
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_48sdp">

        <ImageView
            android:id="@+id/ivVideoPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tint="@color/gray_light_y"
            android:src="@drawable/bg_border_green"
            android:contentDescription="@string/video" />

        <ImageView
            android:id="@+id/ivPlay"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_video_play"
            android:contentDescription="@string/video" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/ginger_pro_regular"
            android:text="@string/here_s_the_guide_video"
            android:textColor="@color/reminder_category_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/ginger_pro_regular"
            android:text="@string/step_by_step_walkthrough_to_help_you"
            android:textColor="@color/color_athens_gray2"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>


</LinearLayout>