<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomborder"
    android:gravity="center_vertical"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/ginger_pro_bold"
        android:text="@string/file_upload"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_14sdp"
        android:contentDescription="@string/close"
        android:src="@drawable/close_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/grey_login_new"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivGallery"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_camera_expense"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tvGallery"
        app:layout_constraintStart_toStartOf="@+id/tvGallery"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:fontFamily="@font/ginger_pro_regular"
        android:text="@string/gallery"
        android:textAllCaps="true"
        android:textColor="@color/emi_text_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGallery" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCamera"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_camera_expense"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tvCamera"
        app:layout_constraintStart_toStartOf="@id/tvCamera"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_70sdp"
        android:fontFamily="@font/ginger_pro_regular"
        android:text="@string/camera"
        android:textAllCaps="true"
        android:textColor="@color/emi_text_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>