<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/custom_layout"
            layout="@layout/toolbar_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_grey_border_"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/custom_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/btn_bg_round_corner"
                android:drawableEnd="@drawable/ic_green_right"
                android:padding="@dimen/_8sdp"
                android:text="@string/fastrack_get_3000_cashback"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

            <ImageView
                android:layout_width="@dimen/_210sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/pan_card"
                android:src="@drawable/ic_pan_demo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_14sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ginger_pro_regular"
                    android:text="@string/upload_your"
                    android:textColor="@color/reminder_category_text"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvDocumentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/ginger_pro_bold"
                    android:textColor="@color/reminder_category_text"
                    android:text="@string/document_name" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_40sdp"
                android:fontFamily="@font/ginger_pro_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="1 Lakh+ people have securely uploaded their PAN card"
               android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColor="@color/grey_login_new"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <include
                layout="@layout/video_custom_layout"
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/skip_next"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_upload"
            android:drawableEnd="@drawable/ic_upload_symbol"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/ginger_pro_bold"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="@string/upload"
            android:textAllCaps="true"
            android:textColor="@color/green_dark"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>