<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    app:cardElevation="@dimen/_2sdp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_90sdp"
            android:background="@color/color_at"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/product_image"
                android:padding="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_vehicle_side_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:src="@drawable/ic_close" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/vehicleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_mild"
                android:textSize="@dimen/_12ssp"
                android:minLines="2"
                android:fontFamily="@font/ginger_pro_demi"
                android:text="Honda Activa 6g"
                android:textAppearance="?attr/textAppearanceHeadline6" />



            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_4sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ginger_pro_regular"
                android:text="@string/ex_showroom_price"
                android:textColor="@color/grey_login_new"
                android:textSize="@dimen/_8ssp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_1sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ginger_pro_demi"
                android:text="@string/_92_599"
                android:textAppearance="?attr/textAppearanceBody2" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCompare"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:text="@string/compare"
            android:textColor="@color/white"
            app:icon="@drawable/ic_white_arrow_right"
            app:iconGravity="textEnd"
            android:gravity="center"
            android:textSize="@dimen/_10ssp"
            app:iconTint="@color/white"
            android:visibility="gone"
            android:paddingVertical="@dimen/_4sdp"
            app:backgroundTint="@color/black100_color"
            android:background="@drawable/bg_black_half_rectangle"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>